RESOLVED FIXED205693
[LFC][Integration] Fix failing text-indent cases when the IFC root is an anonymous box
https://bugs.webkit.org/show_bug.cgi?id=205693
Summary [LFC][Integration] Fix failing text-indent cases when the IFC root is an anon...
alan
Reported 2020-01-02 14:30:55 PST
ssia
Attachments
Patch (8.33 KB, patch)
2020-01-02 14:42 PST, alan
no flags
Patch (7.39 KB, patch)
2020-01-02 15:21 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2020-01-02 14:31:13 PST
alan
Comment 2 2020-01-02 14:42:34 PST
alan
Comment 3 2020-01-02 14:43:17 PST
Fixes the following cases * css2.1/20110323/text-indent-014.htm * fast/css/text-indent-first-line-001.html * fast/css/text-indent-first-line-004.html * fast/css/text-indent-first-line-005.html * fast/css/text-indent-first-line-006.html
Antti Koivisto
Comment 4 2020-01-02 14:58:31 PST
Comment on attachment 386633 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=386633&action=review > Source/WebCore/layout/LayoutState.h:83 > + bool isIntegratedRootBoxFirstChild() const { return m_layoutTreeContent->isRootFirstChild(); } Can't this bit (and any other integration hacks) just be in LayoutState like the viewport size?
alan
Comment 5 2020-01-02 15:20:43 PST
(In reply to Antti Koivisto from comment #4) > Comment on attachment 386633 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=386633&action=review > > > Source/WebCore/layout/LayoutState.h:83 > > + bool isIntegratedRootBoxFirstChild() const { return m_layoutTreeContent->isRootFirstChild(); } > > Can't this bit (and any other integration hacks) just be in LayoutState like > the viewport size? Yeah, let me move it in there.
alan
Comment 6 2020-01-02 15:21:16 PST
WebKit Commit Bot
Comment 7 2020-01-02 16:15:32 PST
Comment on attachment 386636 [details] Patch Clearing flags on attachment: 386636 Committed r253985: <https://trac.webkit.org/changeset/253985>
WebKit Commit Bot
Comment 8 2020-01-02 16:15:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.