[LFC][Integration] Fix failing text-indent cases when the IFC root is an anonymous box https://bugs.webkit.org/show_bug.cgi?id=205693 <rdar://problem/58284277>

Reviewed by Antti Koivisto.

During text-indent computation we would normally check if the IFC root is anonymous and if so,
whether it's the first child of its parent element.
e.g. <div><div>text</div>this text is wrapped inside an anonymous renderer</div>
The IFC root of the "this text.." content is an anonymous container and it is not
the first child of its parent renderer.
However in the LFC integration case, we can't go beyond the IFC root and check for parent-child status.

* layout/LayoutState.h:
(WebCore::Layout::LayoutState::isIntegratedRootBoxFirstChild const):
* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::constraintsForLine):
* layout/layouttree/LayoutBox.h:
(WebCore::Layout::Box::isAnonymous const):
* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::TreeBuilder::buildLayoutTreeForIntegration):
(WebCore::Layout::LayoutTreeContent::setRootIsFirstChild):
(WebCore::Layout::LayoutTreeContent::isRootFirstChild const):
(WebCore::Layout::TreeBuilder::createLayoutBox):
* layout/layouttree/LayoutTreeBuilder.h:


Canonical link: https://commits.webkit.org/218861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253985 268f45cc-cd09-0410-ab3c-d52691b4dbfc