Source/WebCore/layout/LayoutState.h
@@ -77,9 +77,10 @@ public:
     const RenderBox& rootRenderer() const { return m_layoutTreeContent->rootRenderer(); }
 #endif
 
-    // FIXME: LFC integration only. Full LFC has proper ICB access.
+    // LFC integration only. Full LFC has proper ICB access.
     void setViewportSize(const LayoutSize&);
     LayoutSize viewportSize() const;
+    bool isIntegratedRootBoxFirstChild() const;
 
 private:
     void setQuirksMode(QuirksMode quirksMode) { m_quirksMode = quirksMode; }
@@ -92,6 +93,7 @@ private:
     QuirksMode m_quirksMode { QuirksMode::No };
 
     WeakPtr<const LayoutTreeContent> m_layoutTreeContent;
+    // LFC integration only.
     LayoutSize m_viewportSize;
 };
 
