Source/WebCore/layout/inlineformatting/InlineFormattingContext.cpp
@@ -413,7 +413,14 @@ LineBuilder::Constraints InlineFormattingContext::constraintsForLine(const UsedH
         // FIXME: Add support for each-line.
         // [Integration] root()->parent() would normally produce a valid layout box.
         auto& root = this->root();
-        auto isFormattingContextRootCandidateToTextIndent = !root.isAnonymous() || !root.parent() || root.parent()->firstInFlowChild() == &root;
+        auto isFormattingContextRootCandidateToTextIndent = !root.isAnonymous();
+        if (root.isAnonymous()) {
+            // Unless otherwise specified by the each-line and/or hanging keywords, only lines that are the first formatted line
+            // of an element are affected.
+            // For example, the first line of an anonymous block box is only affected if it is the first child of its parent element.
+            isFormattingContextRootCandidateToTextIndent = RuntimeEnabledFeatures::sharedFeatures().layoutFormattingContextIntegrationEnabled() ?
+            layoutState().isIntegratedRootBoxFirstChild() : root.parent()->firstInFlowChild() == &root;
+        }
         if (!isFormattingContextRootCandidateToTextIndent)
             return InlineLayoutUnit { };
         auto invertLineRange = false;
